sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:5: error: not found: value estRange
	estRange = 0
        ^AlgBubbleSort3:11: error: not found: value estRange
			estRange = 1
                        ^